--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
   color: #40514e;
 }
 
+p{
+  line-height: 2;
+}
+
 h1{
   margin: 50px auto 0 50px;
   font-size: 5.625rem;
@@ -27,8 +31,14 @@ h3{
 
 a{
   color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
 }
 
+a:hover{
+  color: #eaf6f6;
+}
 
 /*.container{
   position: relative;;
@@ -50,7 +60,6 @@ a{
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
-  line-height: 2;
 }
 
 .desine{
@@ -68,12 +77,12 @@ a{
 .top-cloud{
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud{
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
@@ -88,27 +97,56 @@ margin: auto;
 
 .bottom-container{
 background-color: #66BFBF;
-padding-left: 30px;
+padding:  50px 0 20px;
 }
 
 .end{
   color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
 
 hr{
-  color: #EAF6F6;
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
 
 }
 
-.btn{
-  background-color: #11999E;
-  border-radius: 3px;
-  color: #ffffff;
-  padding: 6px;
-  text-decoration: none;
+
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
   font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30E3CB;
+  background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+  text-decoration: none;
 }
 
 .prof{
   border-radius: 180px;
+}
+
+.contact-message{
+  width: 40%;
+  margin: 40px auto 60px;
 }
