--- a/style.css
+++ b/style.css
@@ -150,3 +150,18 @@ hr{
   width: 40%;
   margin: 40px auto 60px;
 }
+
+.linkedin{
+    width: 30px;
+    height: 30px;
+}
+
+.twitter{
+    width: 30px;
+    height: 30px;
+}
+
+.whatsapp{
+    width: 30px;
+    height: 30px;
+}
